--- a/style.css
+++ b/style.css
@@ -47,12 +47,17 @@ h3 {
 hr{
 
 }
+.imgsizing{
+  width: 1000;
+  padding-top: 100px;
+
+}
 
 
 .center {
   margin: auto;
   width: 50%;
-  padding: 150px;
+  padding: 100px;
 }
 
 
@@ -122,7 +127,7 @@ a:active {
   position: absolute;
      left: 0;
      right: 0;
-     bottom: 0;
+     bottom: 5;
 
 
 }
