--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .headercolor{
-  background-color:#799cb4;
+  background-color:#3D5A6C;
   padding: 2px;
   margin: auto;
   position: absolute;
@@ -15,7 +15,7 @@ h1 {
   font-size: 50px;
   text-align: center;
   letter-spacing: 20px;
-  color: #e8f6ff;
+  color: #FFFFFF;
 
 }
 h2 {
@@ -23,13 +23,13 @@ h2 {
   font-size: 30px;
   text-align: center;
   letter-spacing: 2px;
-  color: #e8f6ff;
+  color: #FFFFFF;
   height: 25px;
 
 }
 
 h3 {
-  color: #e8f6ff;
+  color: #FFFFFF;
   font-family: 'Comic Sans MS';
   font-size: 20px;
   text-align: center;
@@ -122,7 +122,7 @@ a:active {
 }
 
 .footercolor{
-  background-color:#799cb4;
+  background-color:#3D5A6C;
   padding: 1px;
   margin: auto;
   position: absolute;
